<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_accent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOffice"
                style="@style/CustomTextLargeGreyStyle"
                android:layout_margin="@dimen/_12sdp"
                android:text="@string/office"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOfficeNumber"
                style="@style/CallScreenNumberText"
                android:text="@string/office_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOffice" />

            <View
                android:id="@+id/viewOffice"
                style="@style/viewLineGrey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@id/tvOfficeNumber" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGhazala"
                style="@style/CustomTextLargeGreyStyle"
                android:layout_margin="@dimen/_12sdp"
                android:text="@string/ghazala_operations"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewOffice" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGhajalaNumber"
                style="@style/CallScreenNumberText"
                android:text="@string/ghajala_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGhazala" />

            <View
                android:id="@+id/viewGhajala"
                style="@style/viewLineGrey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@id/tvGhajalaNumber" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAli"
                style="@style/CustomTextLargeGreyStyle"
                android:layout_margin="@dimen/_12sdp"
                android:text="@string/ali"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewGhajala" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAliNumber"
                style="@style/CallScreenNumberText"
                android:text="@string/Ali_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAli" />

            <View
                android:id="@+id/viewAli"
                style="@style/viewLineGrey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@id/tvAliNumber" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>