<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_32sdp"
        android:layout_marginRight="@dimen/_32sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/ic_app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            style="@style/CustomEditTextStyle"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_48sdp"
             />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUserName"
            android:layout_marginTop="@dimen/_16sdp"
            style="@style/CustomEditTextStyle"
            android:hint="@string/pin"
            android:maxLength="4"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
             />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPin"
            style="@style/buttonStyle"
        />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCallOffice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btSave"
            style="@style/CustomTextLargeGreyStyle"
            android:text="@string/str_call_office"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColor="@color/grey_text"
            >

        </androidx.appcompat.widget.AppCompatTextView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>