<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/ic_app_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeading"
                style="@style/CustomTextLargeGreyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:text="@string/call_detail"
                android:textAllCaps="true"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cvStaticContactList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeading">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvOffice"
                    style="@style/CustomTextLargeGreyStyle"
                    android:layout_margin="@dimen/_12sdp"
                    android:text="@string/office"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvOfficeNumber"
                    style="@style/CallScreenNumberText"
                    android:text="@string/office_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvOffice" />

                <View
                    android:id="@+id/viewOffice"
                    style="@style/viewLineGrey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:layout_constraintTop_toBottomOf="@id/tvOfficeNumber" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvGhazala"
                    style="@style/CustomTextLargeGreyStyle"
                    android:layout_margin="@dimen/_12sdp"
                    android:text="@string/ghazala_operations"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewOffice" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvGhajalaNumber"
                    style="@style/CallScreenNumberText"
                    android:text="@string/ghajala_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvGhazala" />

                <View
                    android:id="@+id/viewGhajala"
                    style="@style/viewLineGrey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:layout_constraintTop_toBottomOf="@id/tvGhajalaNumber" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAsterTraining"
                    style="@style/CustomTextLargeGreyStyle"
                    android:layout_margin="@dimen/_12sdp"
                    android:text="@string/aster_training_inspection"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewGhajala" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAsterTrainingNumber"
                    style="@style/CallScreenNumberText"
                    android:text="@string/office_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAsterTraining" />

                <View
                    android:id="@+id/viewTraining"
                    style="@style/viewLineGrey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:layout_constraintTop_toBottomOf="@id/tvAsterTrainingNumber" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDocument"
                    style="@style/CustomTextLargeGreyStyle"
                    android:layout_margin="@dimen/_12sdp"
                    android:text="@string/rubia_documents_applications"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewTraining" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDocumentNumber"
                    style="@style/CallScreenNumberText"
                    android:text="@string/document_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDocument" />

                <View
                    android:id="@+id/documetView"
                    style="@style/viewLineGrey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:layout_constraintTop_toBottomOf="@id/tvDocumentNumber" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAli"
                    style="@style/CustomTextLargeGreyStyle"
                    android:layout_margin="@dimen/_12sdp"
                    android:text="@string/ali"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/documetView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAliNumber"
                    style="@style/CallScreenNumberText"
                    android:text="@string/Ali_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAli" />

                <View
                    android:id="@+id/viewAli"
                    style="@style/viewLineGrey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:layout_constraintTop_toBottomOf="@id/tvAliNumber" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvWorkshop"
                    style="@style/CustomTextLargeGreyStyle"
                    android:layout_margin="@dimen/_12sdp"
                    android:text="@string/workshop"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewAli" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvWorkshopNumber"
                    style="@style/CallScreenNumberText"
                    android:text="@string/workshop_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvWorkshop" />

                <View
                    android:id="@+id/viewWorkshop"
                    style="@style/viewLineGrey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:layout_constraintTop_toBottomOf="@id/tvWorkshopNumber" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cvApiList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeading">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/_54sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_contact_list" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>