<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_2sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/CustomTextLargeGreyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/greyBg"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAmountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/dummy_amt"
                android:textColor="@color/orange"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toStartOf="@+id/tvPerDay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPerDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/per_day"
                android:textColor="@color/grey"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvAmountValue"
                app:layout_constraintStart_toEndOf="@+id/tvAmountValue" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>